General maven update. Restructure poms to parent and modules. Update to Java 21
Signed-off-by: Oliver Geisel <geisel.oliver@googlemail.com>